--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ groq==0.31.1
 pymongo==4.14.1
 imagehash==4.3.2
 numpy==2.1.1
-torch==2.8.0
-torchvision==0.23.0
 openai==1.106.1
+torch==2.8.0+cpu
+torchvision==0.23.0+cpu
